fix scroll on safari

--- a/src/App.sass
+++ b/src/App.sass
@@ -19,6 +19,7 @@ html,
   background-color: #FBFAF7
 
 .app-content
+  flex-basis: 0
 
 .loading
   position: absolute
